frosh-api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frosh-api-svc
  namespace: frosh-api
spec:
  selector:
    app: frosh-api
  ports:
    - port: 8080
      targetPort: 8080
